--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "dotenv": "^16.3.1",
     "express-http-context": "^1.2.4",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.3.2",
     "nestjs-pino": "^3.3.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "response-time": "^2.3.2",
     "rxjs": "^7.8.1",
